# DiskAnalyzer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  crawler.rs  diagram.rs  main.rs
src/crawler/: dir.rs  node.rs  workers.rs
src/diagram/: media_type.rs  shared.rs  table.rs  tree.rs
src/util/: file_util.rs  mod.rs
tests/: args_test.rs
