[package]
name = "DiskAnalyzer"
version = "0.1.0"
edition = "2021"
repository="https://github.com/alirezasariri78/DiskAnalyzer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4.5.4",features=["cargo"]}
rs-abbreviation-number = "0.2.1"