[package]
name = "DiskAnalyzer"
version = "1.0.1"
edition = "2021"
repository="https://github.com/alirezasariri78/DiskAnalyzer"
description="make diagram base on system folder size"
license="MIT OR Apache-2.0"
keywords = ["disk", "disk_analyzer","rust_disk_analyze","hard_drive","size"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "diska"
path = "src/main.rs"

[dependencies]
clap={version="4.5.4",features=["cargo"]}
rs-abbreviation-number = "0.2.1"
cli-table = "0.4"
colored = "2.1.0"
piechart="1.0.0"
